--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,9 @@ IgniteEngine/IgniteEngine/x64/*
 IgniteEngine/shaders/*.spv
 IgniteEngine/x64
 IgniteEngine/x64/*
+!IgniteEngine/x64/Debug/SDL2.dll
+!IgniteEngine/x64/Release/SDL2.dll
+
 */.vs/*
 IgniteEngine/IgniteEngine/glfw
 IgniteEngine/IgniteEngine/glfw/*
