--- a/IgniteEngine/IgniteEngine/IgniteEngine.vcxproj
+++ b/IgniteEngine/IgniteEngine/IgniteEngine.vcxproj
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <Project DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <ItemGroup Label="ProjectConfigurations">
     <ProjectConfiguration Include="Debug|Win32">
@@ -189,12 +189,14 @@
     <ClCompile Include="Object3D.cpp" />
     <ClCompile Include="PerspectiveCamera.cpp" />
     <ClCompile Include="PhysicalDevice.cpp" />
+    <ClCompile Include="Pipeline.cpp" />
     <ClCompile Include="Queue.cpp" />
     <ClCompile Include="Renderer.cpp" />
     <ClCompile Include="Ressource.cpp" />
     <ClCompile Include="Sampler.cpp" />
     <ClCompile Include="SamplerInfo.cpp" />
     <ClCompile Include="SecondaryMocapHeaderNetwork.cpp" />
+    <ClCompile Include="Shader.cpp" />
     <ClCompile Include="StorageBuffer.cpp" />
     <ClCompile Include="Swapchain.cpp" />
     <ClCompile Include="TestModule.cpp" />
@@ -248,6 +250,7 @@
     <ClInclude Include="Object3D.h" />
     <ClInclude Include="PerspectiveCamera.h" />
     <ClInclude Include="PhysicalDevice.h" />
+    <ClInclude Include="Pipeline.h" />
     <ClInclude Include="Queue.h" />
     <ClInclude Include="Renderer.h" />
     <ClInclude Include="resource.h" />
@@ -255,6 +258,7 @@
     <ClInclude Include="Sampler.h" />
     <ClInclude Include="SamplerInfo.h" />
     <ClInclude Include="SecondaryMocapHeaderNetwork.h" />
+    <ClInclude Include="Shader.h" />
     <ClInclude Include="stb_image\stb_image.h" />
     <ClInclude Include="stb_image\stb_image_resize.h" />
     <ClInclude Include="stb_image\stb_image_write.h" />
