--- a/IgniteEngine/IgniteEngine/IgniteEngine.vcxproj
+++ b/IgniteEngine/IgniteEngine/IgniteEngine.vcxproj
@@ -155,6 +155,7 @@
     <ClCompile Include="CameraScene.cpp" />
     <ClCompile Include="CommandBuffer.cpp" />
     <ClCompile Include="CommandPool.cpp" />
+    <ClCompile Include="ComputeShader.cpp" />
     <ClCompile Include="DefaultConf.cpp" />
     <ClCompile Include="DefaultGPU.cpp" />
     <ClCompile Include="DefaultRenderer.cpp" />
@@ -217,6 +218,7 @@
     <ClInclude Include="CameraScene.h" />
     <ClInclude Include="CommandBuffer.h" />
     <ClInclude Include="CommandPool.h" />
+    <ClInclude Include="ComputeShader.h" />
     <ClInclude Include="DefaultConf.h" />
     <ClInclude Include="DefaultGPU.h" />
     <ClInclude Include="DefaultRenderer.h" />
