Dispatcher create: fences created and command buffer too.

--- a/IgniteEngine/IgniteEngine/IgniteEngine.vcxproj
+++ b/IgniteEngine/IgniteEngine/IgniteEngine.vcxproj
@@ -161,6 +161,8 @@
     <ClCompile Include="DefaultGPU.cpp" />
     <ClCompile Include="DefaultRenderer.cpp" />
     <ClCompile Include="DepthBuffer.cpp" />
+    <ClCompile Include="Dispatcher.cpp" />
+    <ClCompile Include="DispatcherSync.cpp" />
     <ClCompile Include="EngineApp.cpp" />
     <ClCompile Include="EngineEntity.cpp" />
     <ClCompile Include="Entity3D.cpp" />
@@ -225,6 +227,8 @@
     <ClInclude Include="DefaultGPU.h" />
     <ClInclude Include="DefaultRenderer.h" />
     <ClInclude Include="DepthBuffer.h" />
+    <ClInclude Include="Dispatcher.h" />
+    <ClInclude Include="DispatcherSync.h" />
     <ClInclude Include="EngineApp.h" />
     <ClInclude Include="EngineEntity.h" />
     <ClInclude Include="Entity3D.h" />
