--- a/IgniteEngine/IgniteEngine/IgniteEngine.vcxproj.filters
+++ b/IgniteEngine/IgniteEngine/IgniteEngine.vcxproj.filters
@@ -16,12 +16,6 @@
     <Filter Include="Ignite">
       <UniqueIdentifier>{9e1914a5-1b23-45a3-86aa-83f78beb59f6}</UniqueIdentifier>
     </Filter>
-    <Filter Include="Ignite\inc">
-      <UniqueIdentifier>{e7f8d37a-ff14-42d8-a9cf-15114128dbb4}</UniqueIdentifier>
-    </Filter>
-    <Filter Include="Ignite\src">
-      <UniqueIdentifier>{7c08a3a9-336a-4498-9b70-57a2a91c95d4}</UniqueIdentifier>
-    </Filter>
     <Filter Include="NetworkProtocole">
       <UniqueIdentifier>{086c71b9-c213-4962-a385-910727b457d1}</UniqueIdentifier>
     </Filter>
@@ -46,100 +40,112 @@
     <Filter Include="Ignite\fast_obj">
       <UniqueIdentifier>{b648ba69-ff98-40bf-ba78-90552553cc4e}</UniqueIdentifier>
     </Filter>
+    <Filter Include="Ignite\Imgui">
+      <UniqueIdentifier>{2f36f05d-dcb4-4ab5-9805-704b485ae290}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Ignite\Module">
+      <UniqueIdentifier>{9b27c24e-d457-4769-bdbc-995c592a8e1e}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Ignite\Engine">
+      <UniqueIdentifier>{b321ba15-9197-4f69-926f-fb2e07ef4901}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Ignite\Engine\src">
+      <UniqueIdentifier>{7c08a3a9-336a-4498-9b70-57a2a91c95d4}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Ignite\Engine\inc">
+      <UniqueIdentifier>{e7f8d37a-ff14-42d8-a9cf-15114128dbb4}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Ressource.cpp">
-      <Filter>Ignite\src</Filter>
+      <Filter>Ignite\Engine\src</Filter>
     </ClCompile>
     <ClCompile Include="Instance.cpp">
-      <Filter>Ignite\src</Filter>
+      <Filter>Ignite\Engine\src</Filter>
     </ClCompile>
     <ClCompile Include="PhysicalDevice.cpp">
-      <Filter>Ignite\src</Filter>
+      <Filter>Ignite\Engine\src</Filter>
     </ClCompile>
     <ClCompile Include="DefaultGPU.cpp">
-      <Filter>Ignite\src</Filter>
+      <Filter>Ignite\Engine\src</Filter>
     </ClCompile>
     <ClCompile Include="Window.cpp">
-      <Filter>Ignite\src</Filter>
+      <Filter>Ignite\Engine\src</Filter>
     </ClCompile>
     <ClCompile Include="IgniteEngine.cpp">
       <Filter>Fichiers sources</Filter>
     </ClCompile>
     <ClCompile Include="EngineEntity.cpp">
-      <Filter>Ignite\src</Filter>
+      <Filter>Ignite\Engine\src</Filter>
     </ClCompile>
     <ClCompile Include="WindowSurface.cpp">
-      <Filter>Ignite\src</Filter>
+      <Filter>Ignite\Engine\src</Filter>
     </ClCompile>
     <ClCompile Include="LogicalDevice.cpp">
-      <Filter>Ignite\src</Filter>
+      <Filter>Ignite\Engine\src</Filter>
     </ClCompile>
     <ClCompile Include="CommandPool.cpp">
-      <Filter>Ignite\src</Filter>
+      <Filter>Ignite\Engine\src</Filter>
     </ClCompile>
     <ClCompile Include="CommandBuffer.cpp">
-      <Filter>Ignite\src</Filter>
+      <Filter>Ignite\Engine\src</Filter>
     </ClCompile>
     <ClCompile Include="Queue.cpp">
-      <Filter>Ignite\src</Filter>
+      <Filter>Ignite\Engine\src</Filter>
     </ClCompile>
     <ClCompile Include="Swapchain.cpp">
-      <Filter>Ignite\src</Filter>
+      <Filter>Ignite\Engine\src</Filter>
     </ClCompile>
     <ClCompile Include="Image.cpp">
-      <Filter>Ignite\src</Filter>
+      <Filter>Ignite\Engine\src</Filter>
     </ClCompile>
     <ClCompile Include="DepthBuffer.cpp">
-      <Filter>Ignite\src</Filter>
+      <Filter>Ignite\Engine\src</Filter>
     </ClCompile>
     <ClCompile Include="Buffer.cpp">
-      <Filter>Ignite\src</Filter>
+      <Filter>Ignite\Engine\src</Filter>
     </ClCompile>
     <ClCompile Include="VertexBuffer.cpp">
-      <Filter>Ignite\src</Filter>
+      <Filter>Ignite\Engine\src</Filter>
     </ClCompile>
     <ClCompile Include="IndexBuffer.cpp">
-      <Filter>Ignite\src</Filter>
+      <Filter>Ignite\Engine\src</Filter>
     </ClCompile>
     <ClCompile Include="StorageBuffer.cpp">
-      <Filter>Ignite\src</Filter>
+      <Filter>Ignite\Engine\src</Filter>
     </ClCompile>
     <ClCompile Include="UniformBuffer.cpp">
-      <Filter>Ignite\src</Filter>
+      <Filter>Ignite\Engine\src</Filter>
     </ClCompile>
     <ClCompile Include="GraphicShader.cpp">
-      <Filter>Ignite\src</Filter>
+      <Filter>Ignite\Engine\src</Filter>
     </ClCompile>
     <ClCompile Include="ArrayBuffer.cpp">
-      <Filter>Ignite\src</Filter>
+      <Filter>Ignite\Engine\src</Filter>
     </ClCompile>
     <ClCompile Include="GraphicsPipeline.cpp">
-      <Filter>Ignite\src</Filter>
+      <Filter>Ignite\Engine\src</Filter>
     </ClCompile>
     <ClCompile Include="Renderer.cpp">
-      <Filter>Ignite\src</Filter>
+      <Filter>Ignite\Engine\src</Filter>
     </ClCompile>
     <ClCompile Include="DefaultRenderer.cpp">
-      <Filter>Ignite\src</Filter>
+      <Filter>Ignite\Engine\src</Filter>
     </ClCompile>
     <ClCompile Include="Mesh.cpp">
-      <Filter>Ignite\src</Filter>
+      <Filter>Ignite\Engine\src</Filter>
     </ClCompile>
     <ClCompile Include="Entity3D.cpp">
-      <Filter>Ignite\src</Filter>
+      <Filter>Ignite\Engine\src</Filter>
     </ClCompile>
     <ClCompile Include="App.cpp">
-      <Filter>Ignite\src</Filter>
+      <Filter>Ignite\Engine\src</Filter>
     </ClCompile>
     <ClCompile Include="EngineApp.cpp">
-      <Filter>Ignite\src</Filter>
+      <Filter>Ignite\Engine\src</Filter>
     </ClCompile>
     <ClCompile Include="Object3D.cpp">
-      <Filter>Ignite\src</Filter>
-    </ClCompile>
-    <ClCompile Include="TestModule.cpp">
-      <Filter>Fichiers sources</Filter>
+      <Filter>Ignite\Engine\src</Filter>
     </ClCompile>
     <ClCompile Include="ESocket\EServerSocket.cpp">
       <Filter>Ignite\ESocket\src</Filter>
@@ -149,9 +155,6 @@
     </ClCompile>
     <ClCompile Include="ESocket\EStream.cpp">
       <Filter>Ignite\ESocket\src</Filter>
-    </ClCompile>
-    <ClCompile Include="MediapipeModule.cpp">
-      <Filter>Fichiers sources</Filter>
     </ClCompile>
     <ClCompile Include="InitChildPoint.cpp">
       <Filter>NetworkProtocole\src</Filter>
@@ -178,144 +181,186 @@
       <Filter>Fichiers sources</Filter>
     </ClCompile>
     <ClCompile Include="Module.cpp">
-      <Filter>Ignite\src</Filter>
+      <Filter>Ignite\Engine\src</Filter>
     </ClCompile>
     <ClCompile Include="Camera.cpp">
-      <Filter>Ignite\src</Filter>
+      <Filter>Ignite\Engine\src</Filter>
     </ClCompile>
     <ClCompile Include="PerspectiveCamera.cpp">
-      <Filter>Ignite\src</Filter>
+      <Filter>Ignite\Engine\src</Filter>
     </ClCompile>
     <ClCompile Include="Texture.cpp">
-      <Filter>Ignite\src</Filter>
+      <Filter>Ignite\Engine\src</Filter>
     </ClCompile>
     <ClCompile Include="VertexBufferInfo.cpp">
-      <Filter>Ignite\src</Filter>
+      <Filter>Ignite\Engine\src</Filter>
     </ClCompile>
     <ClCompile Include="IndexBufferInfo.cpp">
-      <Filter>Ignite\src</Filter>
+      <Filter>Ignite\Engine\src</Filter>
     </ClCompile>
     <ClCompile Include="ArrayBufferInfo.cpp">
-      <Filter>Ignite\src</Filter>
+      <Filter>Ignite\Engine\src</Filter>
     </ClCompile>
     <ClCompile Include="DefaultConf.cpp">
       <Filter>Fichiers sources</Filter>
     </ClCompile>
     <ClCompile Include="Sampler.cpp">
-      <Filter>Ignite\src</Filter>
+      <Filter>Ignite\Engine\src</Filter>
     </ClCompile>
     <ClCompile Include="SamplerInfo.cpp">
-      <Filter>Ignite\src</Filter>
+      <Filter>Ignite\Engine\src</Filter>
     </ClCompile>
     <ClCompile Include="TextureInfo.cpp">
-      <Filter>Ignite\src</Filter>
+      <Filter>Ignite\Engine\src</Filter>
     </ClCompile>
     <ClCompile Include="Material.cpp">
-      <Filter>Ignite\src</Filter>
+      <Filter>Ignite\Engine\src</Filter>
     </ClCompile>
     <ClCompile Include="fast_obj\fast_obj.c">
       <Filter>Ignite\fast_obj</Filter>
     </ClCompile>
     <ClCompile Include="LoadedObjectInfo.cpp">
-      <Filter>Ignite\src</Filter>
+      <Filter>Ignite\Engine\src</Filter>
     </ClCompile>
     <ClCompile Include="CameraScene.cpp">
-      <Filter>Ignite\src</Filter>
+      <Filter>Ignite\Engine\src</Filter>
     </ClCompile>
     <ClCompile Include="Shader.cpp">
-      <Filter>Ignite\src</Filter>
+      <Filter>Ignite\Engine\src</Filter>
     </ClCompile>
     <ClCompile Include="Pipeline.cpp">
-      <Filter>Ignite\src</Filter>
+      <Filter>Ignite\Engine\src</Filter>
+    </ClCompile>
+    <ClCompile Include="imgui\imgui_widgets.cpp">
+      <Filter>Ignite\Imgui</Filter>
+    </ClCompile>
+    <ClCompile Include="imgui\imgui_tables.cpp">
+      <Filter>Ignite\Imgui</Filter>
+    </ClCompile>
+    <ClCompile Include="imgui\backends\imgui_impl_vulkan.cpp">
+      <Filter>Ignite\Imgui</Filter>
+    </ClCompile>
+    <ClCompile Include="imgui\backends\imgui_impl_sdlrenderer2.cpp">
+      <Filter>Ignite\Imgui</Filter>
+    </ClCompile>
+    <ClCompile Include="imgui\backends\imgui_impl_sdl2.cpp">
+      <Filter>Ignite\Imgui</Filter>
+    </ClCompile>
+    <ClCompile Include="imgui\imgui_draw.cpp">
+      <Filter>Ignite\Imgui</Filter>
+    </ClCompile>
+    <ClCompile Include="imgui\imgui.cpp">
+      <Filter>Ignite\Imgui</Filter>
+    </ClCompile>
+    <ClCompile Include="TestModule.cpp">
+      <Filter>Ignite\Module</Filter>
+    </ClCompile>
+    <ClCompile Include="MenuModule.cpp">
+      <Filter>Ignite\Module</Filter>
+    </ClCompile>
+    <ClCompile Include="MediapipeModule.cpp">
+      <Filter>Ignite\Module</Filter>
+    </ClCompile>
+    <ClCompile Include="ComputePipeline.cpp">
+      <Filter>Ignite\Engine\src</Filter>
+    </ClCompile>
+    <ClCompile Include="ComputeShader.cpp">
+      <Filter>Ignite\Engine\src</Filter>
+    </ClCompile>
+    <ClCompile Include="Dispatcher.cpp">
+      <Filter>Ignite\Engine\src</Filter>
+    </ClCompile>
+    <ClCompile Include="DispatcherSync.cpp">
+      <Filter>Ignite\Engine\src</Filter>
+    </ClCompile>
+    <ClCompile Include="WindowUI.cpp">
+      <Filter>Ignite\Engine\src</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Ressource.h">
-      <Filter>Ignite\inc</Filter>
+      <Filter>Ignite\Engine\inc</Filter>
     </ClInclude>
     <ClInclude Include="PhysicalDevice.h">
-      <Filter>Ignite\inc</Filter>
+      <Filter>Ignite\Engine\inc</Filter>
     </ClInclude>
     <ClInclude Include="DefaultGPU.h">
-      <Filter>Ignite\inc</Filter>
+      <Filter>Ignite\Engine\inc</Filter>
     </ClInclude>
     <ClInclude Include="Window.h">
-      <Filter>Ignite\inc</Filter>
+      <Filter>Ignite\Engine\inc</Filter>
     </ClInclude>
     <ClInclude Include="Instance.h">
-      <Filter>Ignite\inc</Filter>
+      <Filter>Ignite\Engine\inc</Filter>
     </ClInclude>
     <ClInclude Include="EngineEntity.h">
-      <Filter>Ignite\inc</Filter>
+      <Filter>Ignite\Engine\inc</Filter>
     </ClInclude>
     <ClInclude Include="WindowSurface.h">
-      <Filter>Ignite\inc</Filter>
+      <Filter>Ignite\Engine\inc</Filter>
     </ClInclude>
     <ClInclude Include="LogicalDevice.h">
-      <Filter>Ignite\inc</Filter>
+      <Filter>Ignite\Engine\inc</Filter>
     </ClInclude>
     <ClInclude Include="CommandPool.h">
-      <Filter>Ignite\inc</Filter>
+      <Filter>Ignite\Engine\inc</Filter>
     </ClInclude>
     <ClInclude Include="CommandBuffer.h">
-      <Filter>Ignite\inc</Filter>
+      <Filter>Ignite\Engine\inc</Filter>
     </ClInclude>
     <ClInclude Include="Queue.h">
-      <Filter>Ignite\inc</Filter>
+      <Filter>Ignite\Engine\inc</Filter>
     </ClInclude>
     <ClInclude Include="Swapchain.h">
-      <Filter>Ignite\inc</Filter>
+      <Filter>Ignite\Engine\inc</Filter>
     </ClInclude>
     <ClInclude Include="Image.h">
-      <Filter>Ignite\inc</Filter>
+      <Filter>Ignite\Engine\inc</Filter>
     </ClInclude>
     <ClInclude Include="DepthBuffer.h">
-      <Filter>Ignite\inc</Filter>
+      <Filter>Ignite\Engine\inc</Filter>
     </ClInclude>
     <ClInclude Include="Buffer.h">
-      <Filter>Ignite\inc</Filter>
+      <Filter>Ignite\Engine\inc</Filter>
     </ClInclude>
     <ClInclude Include="VertexBuffer.h">
-      <Filter>Ignite\inc</Filter>
+      <Filter>Ignite\Engine\inc</Filter>
     </ClInclude>
     <ClInclude Include="IndexBuffer.h">
-      <Filter>Ignite\inc</Filter>
+      <Filter>Ignite\Engine\inc</Filter>
     </ClInclude>
     <ClInclude Include="StorageBuffer.h">
-      <Filter>Ignite\inc</Filter>
+      <Filter>Ignite\Engine\inc</Filter>
     </ClInclude>
     <ClInclude Include="UniformBuffer.h">
-      <Filter>Ignite\inc</Filter>
+      <Filter>Ignite\Engine\inc</Filter>
     </ClInclude>
     <ClInclude Include="GraphicShader.h">
-      <Filter>Ignite\inc</Filter>
+      <Filter>Ignite\Engine\inc</Filter>
     </ClInclude>
     <ClInclude Include="ArrayBuffer.h">
-      <Filter>Ignite\inc</Filter>
+      <Filter>Ignite\Engine\inc</Filter>
     </ClInclude>
     <ClInclude Include="GraphicsPipeline.h">
-      <Filter>Ignite\inc</Filter>
+      <Filter>Ignite\Engine\inc</Filter>
     </ClInclude>
     <ClInclude Include="Renderer.h">
-      <Filter>Ignite\inc</Filter>
+      <Filter>Ignite\Engine\inc</Filter>
     </ClInclude>
     <ClInclude Include="DefaultRenderer.h">
-      <Filter>Ignite\inc</Filter>
+      <Filter>Ignite\Engine\inc</Filter>
     </ClInclude>
     <ClInclude Include="Mesh.h">
-      <Filter>Ignite\inc</Filter>
+      <Filter>Ignite\Engine\inc</Filter>
     </ClInclude>
     <ClInclude Include="Entity3D.h">
-      <Filter>Ignite\inc</Filter>
+      <Filter>Ignite\Engine\inc</Filter>
     </ClInclude>
     <ClInclude Include="App.h">
-      <Filter>Ignite\inc</Filter>
+      <Filter>Ignite\Engine\inc</Filter>
     </ClInclude>
     <ClInclude Include="EngineApp.h">
-      <Filter>Ignite\inc</Filter>
-    </ClInclude>
-    <ClInclude Include="TestModule.h">
-      <Filter>Fichiers d%27en-tête</Filter>
+      <Filter>Ignite\Engine\inc</Filter>
     </ClInclude>
     <ClInclude Include="ESocket\EServerSocket.h">
       <Filter>Ignite\ESocket\inc</Filter>
@@ -327,9 +372,6 @@
       <Filter>Ignite\ESocket\inc</Filter>
     </ClInclude>
     <ClInclude Include="Modules.h">
-      <Filter>Fichiers d%27en-tête</Filter>
-    </ClInclude>
-    <ClInclude Include="MediapipeModule.h">
       <Filter>Fichiers d%27en-tête</Filter>
     </ClInclude>
     <ClInclude Include="resource.h">
@@ -357,13 +399,13 @@
       <Filter>NetworkProtocole\inc</Filter>
     </ClInclude>
     <ClInclude Include="Module.h">
-      <Filter>Ignite\inc</Filter>
+      <Filter>Ignite\Engine\inc</Filter>
     </ClInclude>
     <ClInclude Include="Camera.h">
-      <Filter>Ignite\inc</Filter>
+      <Filter>Ignite\Engine\inc</Filter>
     </ClInclude>
     <ClInclude Include="PerspectiveCamera.h">
-      <Filter>Ignite\inc</Filter>
+      <Filter>Ignite\Engine\inc</Filter>
     </ClInclude>
     <ClInclude Include="stb_image\stb_image_write.h">
       <Filter>Ignite\stb_image</Filter>
@@ -375,49 +417,100 @@
       <Filter>Ignite\stb_image</Filter>
     </ClInclude>
     <ClInclude Include="Texture.h">
-      <Filter>Ignite\inc</Filter>
+      <Filter>Ignite\Engine\inc</Filter>
     </ClInclude>
     <ClInclude Include="VertexBufferInfo.h">
-      <Filter>Ignite\inc</Filter>
+      <Filter>Ignite\Engine\inc</Filter>
     </ClInclude>
     <ClInclude Include="Object3D.h">
-      <Filter>Ignite\inc</Filter>
+      <Filter>Ignite\Engine\inc</Filter>
     </ClInclude>
     <ClInclude Include="ArrayBufferInfo.h">
-      <Filter>Ignite\inc</Filter>
+      <Filter>Ignite\Engine\inc</Filter>
     </ClInclude>
     <ClInclude Include="IndexBufferInfo.h">
-      <Filter>Ignite\inc</Filter>
+      <Filter>Ignite\Engine\inc</Filter>
     </ClInclude>
     <ClInclude Include="DefaultConf.h">
       <Filter>Fichiers d%27en-tête</Filter>
     </ClInclude>
     <ClInclude Include="Sampler.h">
-      <Filter>Ignite\inc</Filter>
+      <Filter>Ignite\Engine\inc</Filter>
     </ClInclude>
     <ClInclude Include="SamplerInfo.h">
-      <Filter>Ignite\inc</Filter>
+      <Filter>Ignite\Engine\inc</Filter>
     </ClInclude>
     <ClInclude Include="TextureInfo.h">
-      <Filter>Ignite\inc</Filter>
+      <Filter>Ignite\Engine\inc</Filter>
     </ClInclude>
     <ClInclude Include="Material.h">
-      <Filter>Ignite\inc</Filter>
+      <Filter>Ignite\Engine\inc</Filter>
     </ClInclude>
     <ClInclude Include="fast_obj\fast_obj.h">
       <Filter>Ignite\fast_obj</Filter>
     </ClInclude>
     <ClInclude Include="LoadedObjectInfo.h">
-      <Filter>Ignite\inc</Filter>
+      <Filter>Ignite\Engine\inc</Filter>
     </ClInclude>
     <ClInclude Include="CameraScene.h">
-      <Filter>Ignite\inc</Filter>
+      <Filter>Ignite\Engine\inc</Filter>
     </ClInclude>
     <ClInclude Include="Shader.h">
-      <Filter>Ignite\inc</Filter>
+      <Filter>Ignite\Engine\inc</Filter>
     </ClInclude>
     <ClInclude Include="Pipeline.h">
-      <Filter>Ignite\inc</Filter>
+      <Filter>Ignite\Engine\inc</Filter>
+    </ClInclude>
+    <ClInclude Include="imgui\imstb_truetype.h">
+      <Filter>Ignite\Imgui</Filter>
+    </ClInclude>
+    <ClInclude Include="imgui\imstb_textedit.h">
+      <Filter>Ignite\Imgui</Filter>
+    </ClInclude>
+    <ClInclude Include="imgui\imstb_rectpack.h">
+      <Filter>Ignite\Imgui</Filter>
+    </ClInclude>
+    <ClInclude Include="imgui\backends\imgui_impl_vulkan.h">
+      <Filter>Ignite\Imgui</Filter>
+    </ClInclude>
+    <ClInclude Include="imgui\backends\imgui_impl_sdlrenderer2.h">
+      <Filter>Ignite\Imgui</Filter>
+    </ClInclude>
+    <ClInclude Include="imgui\backends\imgui_impl_sdl2.h">
+      <Filter>Ignite\Imgui</Filter>
+    </ClInclude>
+    <ClInclude Include="imgui\imconfig.h">
+      <Filter>Ignite\Imgui</Filter>
+    </ClInclude>
+    <ClInclude Include="imgui\imgui.h">
+      <Filter>Ignite\Imgui</Filter>
+    </ClInclude>
+    <ClInclude Include="imgui\imgui_internal.h">
+      <Filter>Ignite\Imgui</Filter>
+    </ClInclude>
+    <ClInclude Include="TestModule.h">
+      <Filter>Ignite\Module</Filter>
+    </ClInclude>
+    <ClInclude Include="MenuModule.h">
+      <Filter>Ignite\Module</Filter>
+    </ClInclude>
+    <ClInclude Include="MediapipeModule.h">
+      <Filter>Ignite\Module</Filter>
+    </ClInclude>
+    <ClInclude Include="DispatcherSync.h">
+      <Filter>Ignite\Engine\inc</Filter>
+    </ClInclude>
+    <ClInclude Include="Dispatcher.h">
+      <Filter>Ignite\Engine\inc</Filter>
+    </ClInclude>
+    <ClInclude Include="ComputeShader.h">
+      <Filter>Ignite\Engine\inc</Filter>
+    </ClInclude>
+    <ClInclude Include="ComputePipeline.h">
+      <Filter>Ignite\Engine\inc</Filter>
+    </ClInclude>
+    <ClInclude Include="WindowUI.h">
+      <Filter>Ignite\Engine\inc</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
