--- a/IgniteEngine/IgniteEngine/imgui.ini
+++ b/IgniteEngine/IgniteEngine/imgui.ini
@@ -14,8 +14,28 @@ Size=326,373
 Collapsed=0
 
 [Window][Hello, world!]
-Pos=323,151
-Size=350,256
+Pos=436,135
+Size=342,379
+Collapsed=0
+
+[Window][RayTracing]
+Pos=799,203
+Size=342,187
+Collapsed=0
+
+[Window][TEST]
+Pos=60,60
+Size=191,71
+Collapsed=0
+
+[Window][Ray Tracer]
+Pos=284,86
+Size=292,250
+Collapsed=0
+
+[Window][Menu]
+Pos=95,56
+Size=129,58
 Collapsed=0
 
 [Docking][Data]
