--- a/IgniteEngine/IgniteEngine/IgniteEngine.vcxproj
+++ b/IgniteEngine/IgniteEngine/IgniteEngine.vcxproj
@@ -174,6 +174,7 @@
     <ClCompile Include="fast_obj\fast_obj.c" />
     <ClCompile Include="GraphicShader.cpp" />
     <ClCompile Include="GraphicsPipeline.cpp" />
+    <ClCompile Include="Hand2D.cpp" />
     <ClCompile Include="HeaderMessageProtocoleNetwork.cpp" />
     <ClCompile Include="Hit.cpp" />
     <ClCompile Include="Hittable.cpp" />
@@ -257,6 +258,7 @@
     <ClInclude Include="fast_obj\fast_obj.h" />
     <ClInclude Include="GraphicShader.h" />
     <ClInclude Include="GraphicsPipeline.h" />
+    <ClInclude Include="Hand2D.h" />
     <ClInclude Include="HeaderMessageProtocoleNetwork.h" />
     <ClInclude Include="Hit.h" />
     <ClInclude Include="Hittable.h" />
