--- a/IgniteEngine/IgniteEngine/IgniteEngine.vcxproj
+++ b/IgniteEngine/IgniteEngine/IgniteEngine.vcxproj
@@ -160,6 +160,7 @@
     <ClCompile Include="ComputeShader.cpp" />
     <ClCompile Include="ComputeShaderTest.cpp" />
     <ClCompile Include="DefaultConf.cpp" />
+    <ClCompile Include="DefaultConfModule.cpp" />
     <ClCompile Include="DefaultGPU.cpp" />
     <ClCompile Include="DefaultRenderer.cpp" />
     <ClCompile Include="DepthBuffer.cpp" />
@@ -249,6 +250,7 @@
     <ClInclude Include="ComputeShader.h" />
     <ClInclude Include="ComputeShaderTest.h" />
     <ClInclude Include="DefaultConf.h" />
+    <ClInclude Include="DefaultConfModule.h" />
     <ClInclude Include="DefaultGPU.h" />
     <ClInclude Include="DefaultRenderer.h" />
     <ClInclude Include="DepthBuffer.h" />
